objects/Location_Or_Division__c.object
<CustomObject>
    <fields>
        <fullName>Byte_4_Descirption__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Location or Division Description</inlineHelpText>
        <label>Byte 4 Descirption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Byte_4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Location or Division Byte</inlineHelpText>
        <label>Byte 4</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Locations Or Divisions</relationshipLabel>
        <relationshipName>Locations_Or_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Location Or Division</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOC-{000000}</displayFormat>
        <label>Location or Division Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations Or Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>